--- a/FrontEnd/funcionarios.html
+++ b/FrontEnd/funcionarios.html
@@ -125,6 +125,11 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script src="assets/js/app.js"></script>
+    
+    <script src="assets/js/funcionarios.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>>
 </body>
 </html>
