--- a/FrontEnd/setor-form.html
+++ b/FrontEnd/setor-form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novo Usuário - StarPeople</title>
+    <title>Setor - StarPeople</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -21,41 +21,27 @@
 
                 <div class="card card-dashboard p-4 border-0 shadow-lg">
                     <h3 class="mb-4 text-center text-white" id="tituloFormulario">
-                        <i class="bi bi-shield-lock-fill text-warning"></i> Novo Acesso
+                        <i class="bi bi-buildings-fill text-info"></i> Novo Setor
                     </h3>
 
                     <div id="msg-feedback" class="alert d-none" role="alert"></div>
 
-                    <form id="formUsuario">
+                    <form id="formSetor">
                         
-                        <input type="hidden" id="usuarioId">
+                        <input type="hidden" id="setorId">
 
                         <div class="mb-3">
-                            <label for="login" class="form-label">Login de Acesso</label>
-                            <input type="text" id="login" class="form-control" placeholder="Ex: joao.rh" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="senha" class="form-label">Senha</label>
-                            <input type="password" id="senha" class="form-control" placeholder="Digite a senha..." required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="perfil" class="form-label">Perfil de Acesso</label>
-                            <select class="form-select" id="perfil" required>
-                                <option value="" disabled selected>Selecione um perfil...</option>
-                                <option value="SUPERADMIN">👑 Super Admin (Acesso Total)</option>
-                                <option value="TI">💻 Tecnologia (TI)</option>
-                                <option value="RH">👥 Recursos Humanos (RH)</option>
-                            </select>
+                            <label for="nome" class="form-label">Nome do Setor</label>
+                            <input type="text" id="nome" class="form-control" placeholder="Ex: Recursos Humanos" required>
                         </div>
 
                         <div class="d-flex gap-2 mt-4">
                             <button type="submit" id="btn-salvar" class="btn btn-star-primary flex-fill">
-                                <i class="bi bi-check2-circle me-2"></i>
-                                Salvar Acesso
+                                <i class="bi bi-check2-circle"></i> Salvar
                             </button>
-                            <a href="usuarios.html" class="btn btn-outline-secondary">Cancelar</a>
+                            <a href="setores.html" class="btn btn-outline-secondary">
+                                <i class="bi bi-x-lg"></i> Cancelar
+                            </a>
                         </div>
                     </form>
                 </div>
@@ -71,6 +57,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/notifications.js"></script>
     <script src="assets/js/app.js"></script>
-    <script src="assets/js/usuarios.js"></script> 
+    <script src="assets/js/setor-form.js"></script>
 </body>
 </html>
